--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -27,11 +27,11 @@
 // refine element ui upload
 .upload-container {
   .el-upload {
-    width: 100%;
-
+    // width: 100%;
     .el-upload-dragger {
       width: 100%;
       height: 200px;
+      box-sizing: border-box;
     }
   }
 }
@@ -51,4 +51,8 @@
 // 分页
 .el-pagination {
   margin-top: 15px;
+}
+
+.el-dialog__footer {
+  padding: 0px 20px 20px;
 }
